<resources>
    <string name="app_name">FotballApp</string>
    <string name="match">Match</string>
    <string name="teams">Teams</string>
    <string name="favourite">Favourite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="past_match">Past Match</string>
    <string name="next_match">Next Match</string>
    <string name="ex_vs">VS</string>
    <string name="club">Club</string>
    <string name="goals">GOALS</string>
    <string name="shots">SHOTS</string>
    <string name="formation_not_found">Formasi tidak ada</string>
    <string name="line_up">Line Up</string>
    <string name="goalskeeper">Goalkeeper</string>
    <string name="deffense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="favorite">Favourite</string>
    <string name="forward">Forward</string>
    <string name="message_favourite_add_success">Berhasil menambahkan event ke dalam favourite</string>
    <string name="message_favourite_remove_success">Berhasil menghapus event dari favourite</string>
    <string name="overview">Overview</string>
    <string name="player">Player</string>
    <string name="weight_header">Weight (KG)</string>
    <string name="height_header">Height (m)</string>


    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
</resources>
