<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_player"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/black"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/player" />

                <LinearLayout
                    android:weightSum="12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_weight="6"
                        android:layout_width="0dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/weight_header"/>

                        <TextView
                            android:id="@+id/tv_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="36sp"
                            android:text="65.5"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="6"
                        android:layout_width="0dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/height_header"/>

                        <TextView
                            android:id="@+id/tv_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="36dp"
                            android:text="65.5"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="Forward"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/black"/>

                <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="13sp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/black"
                    android:text="DESC"/>

            </LinearLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>