<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="-"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="-"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:gravity="center"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/tv_home_score"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_home_badge"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/tv_home_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:text="-"/>

                    <TextView
                        android:id="@+id/tv_home_formation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="-"/>

                </LinearLayout>


                <TextView
                    android:id="@+id/tv_home_score"
                    android:layout_toStartOf="@+id/tv_vs"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="-"/>

                <TextView
                    android:id="@+id/tv_vs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_centerInParent="true"
                    android:text="VS"/>


                <TextView
                    android:id="@+id/tv_away_score"
                    android:layout_toEndOf="@+id/tv_vs"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:text="-"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/tv_away_score"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_away_badge"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/tv_away_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:text="-"/>

                    <TextView
                        android:id="@+id/tv_away_formation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="-"/>

                </LinearLayout>

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <RelativeLayout
                    android:layout_toStartOf="@+id/tv_goals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_home_player_scored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textAlignment="textStart"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:text="-"/>

                </RelativeLayout>


                <TextView
                    android:id="@+id/tv_goals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_centerInParent="true"
                    android:text="@string/goals"/>

                <RelativeLayout
                    android:layout_toEndOf="@+id/tv_goals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_away_player_scored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:textAlignment="textEnd"
                        android:layout_alignParentEnd="true"
                        android:text="-"/>

                </RelativeLayout>


            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">


                <RelativeLayout
                    android:layout_toStartOf="@+id/tv_shots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_home_shots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:text="-"/>

                </RelativeLayout>


                <TextView
                    android:id="@+id/tv_shots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_centerInParent="true"
                    android:text="@string/shots"/>

                <RelativeLayout
                    android:layout_toEndOf="@+id/tv_shots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_away_shots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/black"
                        android:layout_alignParentEnd="true"
                        android:text="-"/>

                </RelativeLayout>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line_up"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp"
                android:textAlignment="center"/>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">


                <RelativeLayout
                    android:layout_toStartOf="@+id/tv_goalskeeper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_home_goalkeeper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:text="-"/>

                </RelativeLayout>


                <TextView
                    android:id="@+id/tv_goalskeeper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_centerInParent="true"
                    android:text="@string/goalskeeper"/>

                <RelativeLayout
                    android:layout_toEndOf="@+id/tv_goalskeeper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_away_goolkeeprer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/black"
                        android:layout_alignParentEnd="true"
                        android:text="-"/>

                </RelativeLayout>


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">


                <RelativeLayout
                    android:layout_toStartOf="@+id/tv_deffense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_home_deffense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:text="-"/>

                </RelativeLayout>


                <TextView
                    android:id="@+id/tv_deffense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_centerInParent="true"
                    android:text="@string/deffense"/>

                <RelativeLayout
                    android:layout_toEndOf="@+id/tv_deffense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_away_deffense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/black"
                        android:layout_alignParentEnd="true"
                        android:text="-"/>

                </RelativeLayout>


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">


                <RelativeLayout
                    android:layout_toStartOf="@+id/tv_midfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_home_midfield"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/black"
                        android:text="-"/>

                </RelativeLayout>


                <TextView
                    android:id="@+id/tv_midfield"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_centerInParent="true"
                    android:text="@string/midfield"/>

                <RelativeLayout
                    android:layout_toEndOf="@+id/tv_midfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_away_midfield"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/black"
                        android:layout_alignParentEnd="true"
                        android:text="-"/>

                </RelativeLayout>


            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>